k8s/admin-web.yaml
# 1. Namespace
apiVersion: v1
kind: Namespace
metadata:
  name: adm-md3-web
---
# 2. Deployment - Flutter Web + NGINX
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flutter-web
  namespace: adm-md3-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flutter-web
  template:
    metadata:
      labels:
        app: flutter-web
    spec:
      imagePullSecrets:
        - name: my-dockerhub-secret
      containers:
        - name: flutter-web
          image: kt71020/md3-admin:0.0.5
          ports:
            - containerPort: 80
---
# 3. Service
apiVersion: v1
kind: Service
metadata:
  name: flutter-web-service
  namespace: adm-md3-web
spec:
  selector:
    app: flutter-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
# 5. Ingress - HTTPS + Auto TLS
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flutter-web-ingress
  namespace: adm-md3-web
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
    - hosts:
        - md3-adm.uirapuka.com
      secretName: flutter-web-tls
  rules:
    - host: md3-adm.uirapuka.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flutter-web-service
                port:
                  number: 80
